# CW_4

./: .gitignore  main.py  pyproject.toml  settings.py
utils/: abstractclasses.py  headhunerapi.py  json_saver.py  superjobapi.py  vacancy.py
