[tool.poetry]
name = "cw-4"
version = "0.1.0"
description = ""
authors = ["Artemii Dovzhenko <rockenny@ymail.com>"]
readme = "README.md"
packages = [{include = "cw_4"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
